Changed a few things for the admin layout, and fixed an issue with the banner alignment in firefox.

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -1,4 +1,9 @@
 /* CSS for About page */
+#About_Title
+{
+	font-size: 24px;
+	font-weight: bold;
+}
 
 #MailLink:link
 {
